--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser = chrome
-url = http://app.briteerp.com/web/login
+url = http://app.twiliaerp.com/web/login
 username = posmanager11@info.com
 usernamePM1=posmanager12@info.com
 usernamePM2=posmanager13@info.com
